# keyclicky

./: Cargo.toml
src/: lib.rs  lib_wrapper.rs  main.rs
src/bin_res/: lib_wrapper.rs  mod.rs
src/lib_res/: audio.rs  serial.rs
