[package]
name = "keyclicky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "keyclicky_lib"

[dependencies]
ctrlc = "3.2.2"
env_logger = "0.9.0"
libloading = "0.7"
log = "0.4.17"
once_cell = "1.13.0"
windows = { version = "0.38.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Media_Audio", "alloc", "Win32_System_SystemServices"] }
